--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fityou",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,13 +9,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.4",
+    "@expo/metro-runtime": "~3.2.1",
+    "@tanstack/react-query": "^5.51.21",
+    "@types/react": "~18.2.79",
+    "apollo-server-express": "^3.13.0",
+    "axios": "^1.7.3",
     "expo": "~51.0.22",
+    "expo-constants": "~16.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.18",
     "expo-status-bar": "~1.12.1",
+    "express": "^4.19.2",
+    "graphql": "^15.9.0",
+    "graphql-request": "^7.1.0",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-dom": "18.2.0",
+    "react-native": "0.74.3",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-web": "~0.19.10",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": true,
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
